--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,6 +51,33 @@ body {
 
 .sidebar {
   flex: 1 0 0;
+
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .tag-size-1 {
+      font-size: 100%;
+      display: inline-flex;
+    }
+
+    .tag-size-2 {
+      font-size: 120%;
+    }
+
+    .tag-size-3 {
+      font-size: 140%;
+    }
+
+    .tag-size-4 {
+      font-size: 160%;
+    }
+
+    .tag-size-5 {
+      font-size: 200%;
+    }
+  }
 }
 
 .posts {
